# llvm-backend

./: README.md  assembly  assembly.ll  llvm-backend.cabal  llvm-practice.cabal  stack.yaml
src/: Codegen.hs  IR.hs  Main.hs
