name:                llvm-practice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dat2/llvm-practice#readme
license:             MIT
license-file:        LICENSE
author:              Nicholas Dujay
maintainer:          nickdujay@gmail.com
copyright:           2017 Nicholas Dujay
category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable llvm-practice
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Codegen
    , IR
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , llvm-hs
                     , llvm-hs-pure
                     , mtl
                     , process
